# internal/armada/validation/job_set_filter.go
@@ -3,8 +3,6 @@ package validation
 import (
 	"fmt"
 
-	"github.com/G-Research/armada/internal/armada/domain"
-	"github.com/G-Research/armada/internal/common/util"
 	"github.com/G-Research/armada/pkg/api"
 )
 
@@ -12,21 +10,22 @@ func ValidateJobSetFilter(filter *api.JobSetFilter) error {
 	if filter == nil {
 		return nil
 	}
-	providedStatesSet := util.StringListToSet(filter.State)
-	for _, state := range filter.State {
-		if !domain.IsValidFilterState(state) {
-			return fmt.Errorf("invalid state provided - state %s unrecognised", state)
-		}
-
-		if state == domain.Pending.String() {
-			if _, present := providedStatesSet[domain.Running.String()]; !present {
-				return fmt.Errorf("unsupported state combination - state %s and %s must always be used together", domain.Pending, domain.Running)
+	providedStatesSet := map[string]bool{}
+	for _, state := range filter.States {
+		providedStatesSet[state.String()] = true
+	}
+	for _, state := range filter.States {
+		if state == api.JobState_PENDING {
+			if _, present := providedStatesSet[api.JobState_RUNNING.String()]; !present {
+				return fmt.Errorf("unsupported state combination - state %s and %s must always be used together",
+					api.JobState_PENDING, api.JobState_RUNNING)
 			}
 		}
 
-		if state == domain.Running.String() {
-			if _, present := providedStatesSet[domain.Pending.String()]; !present {
-				return fmt.Errorf("unsupported state combination - state %s and %s must always be used together", domain.Pending, domain.Running)
+		if state == api.JobState_RUNNING {
+			if _, present := providedStatesSet[api.JobState_PENDING.String()]; !present {
+				return fmt.Errorf("unsupported state combination - state %s and %s must always be used together",
+					api.JobState_PENDING, api.JobState_RUNNING)
 			}
 		}
 	}
